@@ -15,8 +15,12 @@ local error_code_util = require("error_code_util")
 local phobos_version = require("phobos_version")
 local util = require("util")
 
+local function format_version()
+  return string.format("%d.%d.%d", phobos_version.major, phobos_version.minor, phobos_version.patch)
+end
+
 local function print_version()
-  print(string.format("%d.%d.%d", phobos_version.major, phobos_version.minor, phobos_version.patch))
+  print(format_version())
 end
 
 if ... == "--version" then
@@ -112,7 +116,9 @@ local args = arg_parser.parse_and_print_on_error_or_help({...}, {
       field = "use_load",
       long = "use-load",
       description = "Use `load()` to load the bytecode in the generated\n\z
-                     files instead of generating raw bytecode files",
+                     files instead of generating raw bytecode files.\n\z
+                     These files will contain a human readable header\n\z
+                     stating it was compiled by this Phobos version.",
       flag = true,
     },
     {
@@ -494,7 +500,13 @@ if success then
       end
       local output
       if args.use_load then
-        output = "local main_chunk=assert(load(\""..util.to_binary_string(bytecode, true).."\",nil,'b'))\nreturn main_chunk(...)"
+        output = "\z
+          ----------------------------------------------------------------\n\z
+          -- This file was generated by Phobos version "..format_version().."\n\z
+          ----------------------------------------------------------------\n\z
+          local main_chunk=assert(load(\""..util.to_binary_string(bytecode, true).."\",nil,'b'))\n\z
+          return main_chunk(...)\z
+        "
       else
         output = bytecode
       end
